--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   http: ^0.13.3
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
+  shared_preferences:
+  sqflite:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
