--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   rxdart: ^0.27.1
   shared_preferences: ^2.0.7
   sqflite: ^2.0.0+4
+  mockito: ^5.0.15
+  build_runner:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
